# Sentio

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  sentio_test_http_request.http  start.sh
core/: settings.py  urls.py
recommendations/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  vector_db.py  views.py
recommendations/management/commands/: index_articles.py  populate_db.py  seed_db.py
recommendations/migrations/: 0001_initial.py
templates/: base.html  dashboard.html
templates/account/: login.html  logout.html  signup.html
templates/socialaccount/: login.html
